--- a/index.html
+++ b/index.html
@@ -4,6 +4,30 @@
 	<title>Group Project</title>
 </head>
 <body>
-Group project Page
+	<h1>U.S. Box Office Trends of the 2010s</h1>
+	<h3>Team Members - Mark Palmese, Nick Candaffio, Eileen Dolan, Tom Khambounheuang</h3><br>
+	<p>
+		The purpose of this project is to determine what factors provide the largest box office results. Look for trends based on metascore ratings, IMDB ratings, runtime, mpaa rating, and genre.
+	</p>
+	<p>
+		<b>Research Questions to answer</b>
+		<ol>
+			<li>Is there any correlation between critic and user ratings with box office results in the U.S.?</li>
+			<li>Which genres of film resulted in the greatest box office success?</li>
+			<li>Does MPAA rating effect the box office?</li>
+			<li>How does the month of release affect box office results?</li>
+			<li>Does runtime effect box office results?</li>
+		</ol>
+	</p>
+	<p>
+		<h2>Project Findings</h2>
+		<br>
+		<h3>Ratings</h3>
+		Looking at the histograms, we can see the average User score is higher than the average critic's score. Most of the user ratings fall between 50 and 70, whereas the critics ratings are much more widely distributed.
+		<img src="https://github.com/Mpalmese/ProjectRepo/blob/master/Analysis%20Charts/1.%20Critic%20and%20User%20Rating/Rating_Histogram.png?raw=true" alt="Histogram"> <br>
+		As expected from the histogram, the critics ratings are have a much wider distribution than the User ratings.There are a large number of movies that, regardless of the rating, have very low box office numbers.Although the correlation appears weak it does seem like the higher the rating is, there are more high box office movies there are.<br>
+		<img src="https://github.com/Mpalmese/ProjectRepo/blob/master/Analysis%20Charts/1.%20Critic%20and%20User%20Rating/Rating_LR.png?raw=true"> <br>
+	</p>
+<b><a href="http://ncandaffio.github.io">Retrun Home</a></b>
 </body>
 </html>
